# actinium-template

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mdbook.yml
backend/: Cargo.toml  compose.yaml  dev.dockerfile
backend/src/: lib.rs  main.rs  tls.rs
backend/src/cryptography/: jwt.rs  mod.rs
backend/src/db/: error.rs  mod.rs
backend/src/db/interfaces/: example.rs
backend/src/db/pg/: example.rs  mod.rs
backend/src/middleware/: https.rs  minimum.rs  mod.rs
backend/src/outbound/: mod.rs
backend/src/outbound/pg/: mod.rs
docs/: book.toml
docs/src/: SUMMARY.md  frontend.md  introduction.md
docs/src/backend/: cryptography.md  index.md  outbound.md
docs/src/backend/outbound/: driver_interfaces.md  index.md
frontend/: package-lock.json  package.json  vite.config.ts
src/: main.rs
